--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="dashboard">
+            <div class="Logo">
+                <img src="icons/view-dashboard.svg" alt="">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="dashboard-links">
+            <div>
+                <img src="icons/home-variant.svg" alt="">
+                <a href="">Home</a>
+            </div>
+            <div>
+                <img src="icons/card-account-details-outline.svg" alt="">
+                <a href="">Profile</a>
+            </div>
+            <div>
+                <img src="icons/message-reply.svg" alt="">
+                <a href="">Messages</a>
+            </div>
+            <div>
+                <img src="icons/clock-time-five.svg" alt="">
+                <a href="">History</a>
+            </div>
+            <div>
+                <img src="icons/note-multiple.svg" alt="">
+                <a href="">Tasks</a>
+            </div>
+            <div>
+                <img src="icons/account-group.svg" alt="">
+                <a href="">Communities</a>
+            </div>
+            </div>
+           
+            <div class="support-links">
+                <div>
+                    <img src="icons/cog.svg" alt="">
+                    <a href="">Settings</a>
+                </div>
+                <div>
+                    <img src="icons/tooltip-question.svg" alt="">
+                    <a href="">Support</a>
+                </div>
+                <div>
+                    <img src="icons/shield-check.svg" alt="">
+                    <a href="">Privacy</a>
+                </div>
+            </div>
+
+        </div>
+        <div class="right-container">
+            <div class="header">
+                <div class="search-bar">
+                    <img src="" alt="">
+                    <input type="text">
+                </div>
+            </div>
+            <div class="content-container">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
