add ui for header, projects and announcements

--- a/index.html
+++ b/index.html
@@ -59,12 +59,263 @@
         <div class="right-container">
             <div class="header">
                 <div class="search-bar">
-                    <img src="" alt="">
+                    <img src="icons/magnify.svg" alt="">
                     <input type="text">
+                </div>
+                <div class="user-logo">
+                    <img src="icons/bell-ring-outline.svg" alt="">
+                    <img src="icons/account.svg" alt="">
+                    <p>Morgan Oakley</p>
+                </div>
+                <div class="user-welcome">
+                    <img src="icons/account.svg" alt="">
+                    <div>
+                        <p class="introduction">Hi there, </p>
+                        <p class="user-name">Morgan Oakley (@morgan)</p>
+                    </div>
+                </div>
+                <div class="tweet-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
             </div>
             <div class="content-container">
+                <div class="content-left">
+                    <p>Your Projects</p>
 
+                    <div class="projects-container">
+                        <div class="card">
+                            <div class="card-content"> 
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-content">
+                                <p class="card-title">Super Cool Project</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis provident dicta, assumenda vel enim nobis.</p>
+                            </div>
+                            <div class="card-links">
+                                <img src="icons/star-plus-outline.svg" alt="">
+                                <img src="icons/eye-plus-outline.svg" alt="">
+                                <img src="icons/share-variant-outline.svg" alt="">
+                            </div>
+                        </div>
+                       
+                    </div>
+                </div>
+                <div class="news-container">
+                    <div class="announcements">
+                        <p>Announcements </p>
+                        <div class="announcements-container">
+                            <div class="announcement">
+                                <p>Site Maintenance</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit aliquid unde non, quod velit animi!</p>
+                            </div>
+                            <div class="announcement">
+                                <p>Community Share Day</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit aliquid unde non, quod velit animi!</p>
+                            </div>
+                            <div class="announcement">
+                                <p>Updated Privacy Policy</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit aliquid unde non, quod velit animi!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trending-container">
+                        <p>Trending</p>
+                        <div class="trending-grid-container">
+                        <div>
+                            <img src="icons/account.svg" alt="">
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="icons/account.svg" alt="">
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="icons/account.svg" alt="">
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="icons/account.svg" alt="">
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
